feat: create get driver profile
