# api-docs.json
@@ -166,109 +166,49 @@
               }
             }
           },
-          "401": {
-            "description": "Unauthorized - Authentication token is missing or invalid"
-          },
-          "500": {
-            "description": "Internal server error",
+          "400": {
+            "description": "Validation error",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse500"
-                }
-              }
-            }
-          }
-        },
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ]
-      },
-      "delete": {
-        "tags": [
-          "Driver"
-        ],
-        "summary": "Log out the current driver",
-        "operationId": "logoutDriver",
-        "responses": {
-          "200": {
-            "description": "Driver successfully logged out",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "string",
-                  "example": "ok"
+                  "type": "object",
+                  "properties": {
+                    "errors": {
+                      "type": "object",
+                      "properties": {
+                        "message": {
+                          "type": "string",
+                          "example": "Validation error"
+                        }
+                      }
+                    }
+                  }
                 }
               }
             }
           },
           "401": {
-            "description": "Unauthorized - Authentication token is missing or invalid"
-          },
-          "500": {
-            "description": "Internal server error",
+            "description": "Invalid token",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse500"
-                }
-              }
-            }
-          }
-        },
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ]
-      }
-    },
-    "/driver/{id}/status": {
-      "patch": {
-        "tags": [
-          "Driver"
-        ],
-        "summary": "Update driver status or other details",
-        "operationId": "updateDriverStatus",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "The ID of the driver",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "example": "driver123"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Driver status or details updated successfully",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "string",
-                  "example": "ok"
+                  "type": "object",
+                  "properties": {
+                    "errors": {
+                      "type": "object",
+                      "properties": {
+                        "message": {
+                          "type": "string",
+                          "example": "Authentication token is missing or invalid"
+                        }
+                      }
+                    }
+                  }
                 }
               }
             }
           },
-          "401": {
-            "description": "Unauthorized - Authentication token is missing or invalid"
-          },
-          "404": {
-            "description": "Driver not found",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse404"
-                }
-              }
-            }
-          },
+          
           "500": {
             "description": "Internal server error",
             "content": {
@@ -780,18 +720,22 @@
       "DriverProfileResponse_data": {
         "type": "object",
         "properties": {
-          "name": {
-            "type": "string",
-            "example": "Budi Santoso"
-          },
           "email": {
             "type": "string",
             "format": "email",
             "example": "budi.driver@example.com"
           },
-          "noAngkot": {
+          "username": {
             "type": "string",
-            "example": "D05"
+            "example": "Budi Santoso"
+          },
+          "img_url": {
+            "type": "string",
+            "example": "https://..."
+          },
+          "route": {
+            "type": "string",
+            "example": "05"
           }
         }
       },
